--- a/Lab4.solution.ipynb
+++ b/Lab4.solution.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
     "        self.__y = y\n",
     "        self.__pi = 3.14159 #value of pi\n",
     "\n",
-    "    #accessor methods to retrieve values of variabels\n",
+    "#accessor methods to retrieve values of variabels\n",
     "    def get_radius(self):\n",
     "        return self.__radius\n",
     "\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
     "        self.__x = x \n",
     "        self.__y = y \n",
     "\n",
-    "    #accessor methods to get the private variables\n",
+    "#accessor methods to get the private variables\n",
     "    def get_length(self):\n",
     "        return self.__length\n",
     "\n",
@@ -242,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Triangle:\n",
     "    def __init__(self, base, height, side_a, side_b, side_c, x, y):\n",
-    "        self.__base = base      # Private variable for the base of the triangle\n",
+    "        self.__base = base #base of the triangle\n",
     "        self.__height = height  \n",
     "        self.__side_a = side_a \n",
     "        self.__side_b = side_b\n",
@@ -296,10 +296,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#add a func/method to the object classes, INCLUDING BASE, that wil return a list of 16 pairs\n",
+    "## of x and y points on PARAMETER of objects\n",
+    "\n",
+    "#base class again\n",
+    "class Shape:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width, x, y):\n",
+    "        super().__init__()\n",
+    "        self.__length = length\n",
+    "        self.__width = width\n",
+    "        self.__x = x\n",
+    "        self.__y = y\n",
+    "        \n",
+    "#methods for private \n",
+    "    def get_length(self):\n",
+    "        return self.__length\n",
+    "\n",
+    "    def get_width(self):\n",
+    "        return self.__width\n",
+    "\n",
+    "    def get_x(self):\n",
+    "        return self.__x\n",
+    "    \n",
+    "    def get_y(self):\n",
+    "        return self.__y\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.__length * self.__width\n",
+    "\n",
+    "    def perimeter(self):\n",
+    "        return 2 * (self.__length + self.__width)\n",
+    "    \n",
+    "    \n",
+    "#setting the four corners of the plane to refer to when \n",
+    "#first set - bottom-left point\n",
+    "#second set - bottom- right point\n",
+    "#third set - top-right point\n",
+    "#fourth set - top-left point\n",
+    "    def perimeter_points(self):\n",
+    "        return [(self.__x, self.__y),  \n",
+    "            (self.__x + self.__length, self.__y),\n",
+    "            (self.__x + self.__length, self.__y + self.__width),\n",
+    "            (self.__x, self.__y + self.__width)]\n",
+    "\n",
+    "#circle class\n",
+    "#import math to set up points around the circle\n",
+    "#using sine and cosine to find the set of points in the perimeter\n",
+    "import math\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius, x, y):\n",
+    "        super().__init__()\n",
+    "        self.__radius = radius\n",
+    "        self.__x = x\n",
+    "        self.__y = y\n",
+    "        self.__pi = 3.14159\n",
+    "    \n",
+    "    def get_radius(self):\n",
+    "        return self.__radius\n",
+    "    \n",
+    "    def get_x(self):\n",
+    "        return self.__x\n",
+    "    \n",
+    "    def get_y(self):\n",
+    "        return self.__y\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return self.__pi * self.__radius ** 2\n",
+    "     \n",
+    "    def perimeter(self):\n",
+    "        return 2 * self.__pi * self.__radius\n",
+    "    \n",
+    "#perimeter points\n",
+    "    def perimeter_points(self):\n",
+    "        # 16 points around the circle\n",
+    "        points = [] #empty list\n",
+    "        for i in range(16):\n",
+    "            angle = (2 * self.__pi / 16) * i\n",
+    "            x_point = self.__x + self.__radius * math.cos(angle)\n",
+    "            y_point = self.__y + self.__radius * math.sin(angle)\n",
+    "            points.append((x_point, y_point))\n",
+    "        return points\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle Area: 8\n",
+      "Rectangle Perimeter: 12\n",
+      "Rectangle Perimeter Points: [(0, 0), (2, 0), (2, 4), (0, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test solution\n",
+    "rect = Rectangle(2, 4, 0, 0)\n",
+    "print(\"Rectangle Area:\", rect.area())\n",
+    "print(\"Rectangle Perimeter:\", rect.perimeter())\n",
+    "print(\"Rectangle Perimeter Points:\", rect.perimeter_points())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Circle Area: 12.56636\n",
+      "Circle Perimeter: 12.56636\n",
+      "Circle Perimeter Points: [(2.0, 0.0), (1.8477593188936845, 0.765366251830813), (1.4142145005584525, 1.4142126241871151), (0.7653687034277741, 1.847758303408021), (2.6535897933550656e-06, 1.9999999999982396), (-0.7653638002325049, 1.8477603343760949), (-1.414210747813288, 1.4142163769273006), (-1.8477572879191047, 0.7653711550233877), (-1.9999999999929585, 5.30717958670546e-06), (-1.8477613498552528, -0.7653613486328493), (-1.4142182532936582, -1.414208871436972), (-0.7653736066176531, -1.847756272426936), (-7.960769380934691e-06, -1.9999999999841565), (0.7653588970318456, -1.8477623653311583), (1.4142069950581655, -1.4142201296575276), (1.847755256931514, -0.7653760582105729)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "circle = Circle(2, 0, 0)\n",
+    "print(\"Circle Area:\", circle.area())\n",
+    "print(\"Circle Perimeter:\", circle.perimeter())\n",
+    "print(\"Circle Perimeter Points:\", circle.perimeter_points())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,10 +441,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Shape:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "#method so that each subclass can override\n",
+    "    def is_point_inside(self, x, y):\n",
+    "        return False #false since we don;t know how to check a point inside\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width, x, y):\n",
+    "        self.__length = length\n",
+    "        self.__width = width\n",
+    "        self.__x = x\n",
+    "        self.__y = y\n",
+    "    \n",
+    "#checking if the point is inside the rectangle\n",
+    "    def is_point_inside(self, point_x, point_y):\n",
+    "        x_min = self.__x\n",
+    "        x_max = self.__x + self.__length\n",
+    "        y_min = self.__y\n",
+    "        y_max = self.__y + self.__width\n",
+    "        return x_min <= point_x <= x_max and y_min <= point_y <= y_max\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius, x, y):\n",
+    "        self.__radius = radius\n",
+    "        self.__x = x\n",
+    "        self.__y = y\n",
+    "    \n",
+    "#checking if the point  is inside the circle\n",
+    "    def is_point_inside(self, point_x, point_y):\n",
+    "        return (point_x - self.__x) ** 2 + (point_y - self.__y) ** 2 <= self.__radius ** 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "rect = Rectangle(7, 5, 0, 0) #lenght = 7, width = 5\n",
+    "print(rect.is_point_inside(3, 3)) #true if point inside\n",
+    "print(rect.is_point_inside(11, 3)) #false if point outsdie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "circle = Circle(2, 0, 0)  #radius 2, starts at origin\n",
+    "print(circle.is_point_inside(1, 1))  #true if point inside\n",
+    "print(circle.is_point_inside(3, 0)) #false if points outside"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,10 +530,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Shape:\n",
+    "    def __init__(self, x, y):\n",
+    "        self._x = x #protected variable\n",
+    "        self._y = y #procted variable \n",
+    "    \n",
+    "    def overlaps(self, other):\n",
+    "        return False #this method allows protected variables in base of shape\n",
+    "    \n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width, x, y):\n",
+    "        super().__init__(x, y)\n",
+    "        self._length = length\n",
+    "        self._width = width\n",
+    "\n",
+    "\n",
+    "#checking if shape overlaps with other rectangle\n",
+    "    def overlaps(self, other):\n",
+    "        if not isinstance(other, Rectangle):\n",
+    "            raise TypeError(\"ERROR: you can only overlap with another rectangle.\")\n",
+    "\n",
+    "#check if one rectangle is in shape\n",
+    "#first checks if rectangle is to the left\n",
+    "#second checks if rectangle is tthe right\n",
+    "#thrid cheks if rectangle is below\n",
+    "#if rectangle is above\n",
+    "        return not (self._x + self._length <= other._x or  \n",
+    "                    self._x >= other._x + other._length or \n",
+    "                    self._y + self._width <= other._y or  \n",
+    "                    self._y >= other._y + other._width)\n",
+    "    \n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius, x, y):\n",
+    "        super().__init__(x, y)\n",
+    "        self._radius = radius #protected variable\n",
+    "\n",
+    "    \n",
+    "#checking if circles overlap\n",
+    "    def overlaps(self, other):\n",
+    "        if not isinstance(other, Circle):\n",
+    "            raise TypeError(\"ERROR: You can only check overlap with another circle\")\n",
+    "        \n",
+    "#distance between the centers of the two circles\n",
+    "        distance_between_centers = ((self._x - other._x) ** 2 + (self._y - other._y) ** 2) ** 0.5\n",
+    "        \n",
+    "#overlap if the distance between centers is less than the sum of their radiuses\n",
+    "        return distance_between_centers < (self._radius + other._radius)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#testing solution\n",
+    "rect1 = Rectangle(5, 3, 0, 0)\n",
+    "rect2 = Rectangle(2,1,0,0)\n",
+    "print(rect1.overlaps(rect2)) #true if it does overlap, false if otherwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "circle1 = Circle(7, 0, 0)\n",
+    "circle2 = Circle(2,4,0)\n",
+    "print(circle.overlaps(circle))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,17 +694,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "foo(1,'hello')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test\n",
     "print(repr(foo(1,\"hello\")))"
@@ -418,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,17 +715,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "foo(1,'hello')"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check contents of the saved file\n",
     "!cat Test.foo"
@@ -447,20 +725,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "foo(1,'hello')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the object\n",
     "ff_reloaded=foo_loader(\"Test.foo\")\n",
